--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -67,7 +67,7 @@ jobs:
     strategy:
       matrix:
         arch: ${{ fromJson(needs.init.outputs.architectures_alpine) }}
-        version: ["3.13", "3.14", "3.15"] 
+        version: ["3.12", "3.13", "3.14", "3.15"] 
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v2
